metadata/force-app/main/default/objects/CustomName_dBjvA__c/CustomName_dBjvA__c.object-meta.xml
<CustomObject>
    <description>Description_ubaqv</description>
    <label>CustomLabel_sTZTj</label>
    <nameField>
        <label>CustomLabel_sTZTj</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_sTZTjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>