metadata/force-app/main/default/objects/CustomName_dBjvA__c/fields/CustomField_qxMaW__c.field-meta.xml
<CustomField>
    <fullName>CustomField_qxMaW__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldHDwcq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>