metadata/force-app/main/default/objects/CustomName_dBjvA__c/fields/CustomField_vSJrU__c.field-meta.xml
<CustomField>
    <fullName>CustomField_vSJrU__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldAggON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>